2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, inject.pl: Make the code modular, update copyright

2003-12-10  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* pathsetup.command.in: echo a newline to an existing . file before
	anything else, in case the file does not end in one.

2003-12-04  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Makefile, fink.info.in: Modification of strategy for running the
	test suite.  We now check for the presence of Test::More before
	invoking the tests.  This will fail during bootstrap under 10.2
	but will work at other times.  (Avoids the problems of introducing
	new packages as essential.)

2003-12-04  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* fink.info.in, bootstrap.pl: Run the test suite while building
	fink.  (Requires new bootstrap packages file-spec-pm, test-simple-pm, 
	and test-harness-pm when running under perl 5.6.x.)

2003-11-26  Michael G Schwern <schwern@pobox.com>

	* fink.in: Last change forgot to read_config() so fink wouldn't work.

2003-11-25  Michael G Schwern <schwern@pobox.com>

	* fink-virtual-pkgs.in, fink.in, inject.pl, postinstall.pl.in:
	Ensuring Basepath is set in Fink::Config.
	* fink.in: Making option handling bits readable.
	* fink.in: Ensuring Fink::Config is loaded before Fink::FinkVersion
	used

2003-11-20  Michael G Schwern <schwern@pobox.com>

	* Makefile: run setup.sh before the tests so we have all the files
	generated with a basepath pointing to a test base.  This should
	allow the tests to run even if fink isn't installed.

2003-11-20  Michael G Schwern <schwern@pobox.com>

	* fink-virtual-pkgs.in: Cleaning up logic to check for standalone
	and load modules.  Also, POSIX was always loaded and the fink
	Perl library path added to lib, standalone or not.

2003-11-20  Michael G Schwern <schwern@pobox.com>

	* fink.info.in: Disable running tests as part of the install process
	until the dependency on Test::More and an updated Test::Harness is
	resolved.
